--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,17 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <section id="formBox">
+    <h2 id="boxTitle">search for book by author or title</h2> 
+    <form action = "/" method= "post" >
+  <input type="text" name="title" placeholder="Title">
+  <input type="text" name="author" placeholder="author">
+  <button type ="submit" id="button">Search</button>
+  
+  
+    </form>
+  
+   </section>
   
 </body>
 </html>
