--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,3 +1,36 @@
+*{
+  color: azure;
+}
+
 body {
-  background-color: rgb(168, 151, 184);
+  background-color: rgb(0, 0, 0);
+  border: width 2px;
+  border-style: solid;
+  border-color: red;
+  width: 97vw;
+  height: 2000px;
+}
+
+#button{
+  color: black;
+}
+
+#formBox {
+  text-align: center;
+  width: 100%;
+  border: width 2px;
+  border-style: solid;
+  border-color: red;
+}
+
+.inputQueryHere{
+  margin: auto;
+  margin-bottom: 5vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border: width 2px;
+  border-style: solid;
+  border-color: red;
+  
 }
