--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/layout.css">
-  <title>Document</title>
+  <title>BOOKS</title>
 </head>
+
 <body>
   <section id="formBox">
-    <h2 id="boxTitle">search for book by author or title</h2> 
-    <form action = "/" method= "post" >
-  <input type="text" name="title" placeholder="Title">
-  <input type="text" name="author" placeholder="author">
-  <button type ="submit" id="button">Search</button>
-  
-  
+    <h2 id="boxTitle">Enter your query below.</h2>
+    <form action="/searches"  method="post">
+      <input class="inputQueryHere" type="text" name="entry" placeholder="title/author">
+        <label for="title">Title</label>
+      <input class="inputQueryHere" type="radio" name="title">
+        <label for="author">Author</label>
+      <input class="inputQueryHere" type="radio" name="author">
+      <button type="submit" id="button">Search</button>
     </form>
-  
-   </section>
-  
+  </section>
+
 </body>
+
 </html>
