--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,5 +1,5 @@
 *{
-  color: azure;
+  color: white;
 }
 
 body {
@@ -16,6 +16,7 @@ body {
 }
 
 #formBox {
+  color: black;
   text-align: center;
   width: 100%;
   border: width 2px;
@@ -32,5 +33,5 @@ body {
   border: width 2px;
   border-style: solid;
   border-color: red;
-  
+  background-color: white;
 }
