rendered API info to index

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,6 +2,10 @@
   color: white;
 }
 
+h1{
+  text-align: center;
+}
+
 body {
   background-color: rgb(0, 0, 0);
   border: width 2px;
@@ -13,6 +17,7 @@ body {
 
 #button{
   color: black;
+  margin-bottom: 10vh;
 }
 
 #formBox {
@@ -33,5 +38,5 @@ body {
   border: width 2px;
   border-style: solid;
   border-color: red;
-  background-color: white;
+  background-color: black;
 }
