--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,24 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles/layout.css">
   <title>BOOKS</title>
 </head>
 
 <body>
+  <h1>Now We're Bookin'</h1>
   <section id="formBox">
     <h2 id="boxTitle">Enter your query below.</h2>
-    <form action="/"  method="POST">
+    <form action="/" method="POST">
       <input class="inputQueryHere" type="text" name="query" placeholder="title/author">
-        <label for="title">Title</label>
+      <label for="title">Title</label>
       <input class="inputQueryHere" type="radio" name="title" value="title">
-        <label for="author">Author</label>
+      <label for="author">Author</label>
       <input class="inputQueryHere" type="radio" name="author" value="author">
       <button type="submit" id="button">Search</button>
     </form>
   </section>
   <main>
-
+    <div>
+      <% books.forEach(book => { %>
+        <%= book.volumeInfo.title %>
+      <% }) %>
+    </div>
   </main>
 
 </body>
