--- a/styles/layout.css
+++ b/styles/layout.css
@@ -10,7 +10,7 @@ body {
   background-color: rgb(0, 0, 0);
   border: width 2px;
   border-style: solid;
-  border-color: red;
+  border-color: purple;
   width: 97vw;
   height: 2000px;
 }
@@ -26,7 +26,7 @@ body {
   width: 100%;
   border: width 2px;
   border-style: solid;
-  border-color: red;
+  border-color: hotpink;
 }
 
 .inputQueryHere{
@@ -39,4 +39,10 @@ body {
   border-style: solid;
   border-color: red;
   background-color: black;
+}
+
+#searchResults{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
