returning api data

--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -10,9 +10,9 @@
 <body>
   <h1>SEARCHES</h1>
   <ul>
-    <% books.forEach((book) => { %>
-      <li><%= book.title %> : <%= book.author %> <img src="<%= book.image_url %>" /></li>
-      <li><%= book.description %> : <%= book.isbn %> </li>
+   <% returns.forEach( return => {
+     %> <li> <% returns.title %> </li> %>
+   }) %>
   </ul>
 </body>
 </html>
