--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,12 +12,12 @@
 <body>
   <section id="formBox">
     <h2 id="boxTitle">Enter your query below.</h2>
-    <form action="/"  method="POST">
+    <form action="/show"  method="POST">
       <input class="inputQueryHere" type="text" name="query" placeholder="title/author">
         <label for="title">Title</label>
-      <input class="inputQueryHere" type="radio" name="title" value="title">
+      <input class="inputQueryHere" type="radio" name="searchType" value="title">
         <label for="author">Author</label>
-      <input class="inputQueryHere" type="radio" name="author" value="author">
+      <input class="inputQueryHere" type="radio" name="searchType" value="author">
       <button type="submit" id="button">Search</button>
     </form>
   </section>
