--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,29 +1,3 @@
-*{
-  color: white;
-}
-
-body {
-  background-color: rgb(0, 0, 0);
-  border: width 2px;
-  border-style: solid;
-  border-color: red;
-  width: 97vw;
-  height: 2000px;
-}
-
-#button{
-  color: black;
-}
-
-#formBox {
-  color: black;
-  text-align: center;
-  width: 100%;
-  border: width 2px;
-  border-style: solid;
-  border-color: red;
-}
-
 .inputQueryHere{
   margin: auto;
   margin-bottom: 5vh;
@@ -33,5 +7,22 @@ body {
   border: width 2px;
   border-style: solid;
   border-color: red;
-  background-color: white;
+  background-color: black;
+}
+
+*{
+  color: white;
+}
+
+h1{
+  text-align: center;
+}
+
+body {
+  background-color: rgb(0, 0, 0);
+  border: width 2px;
+  border-style: solid;
+  border-color: rgb(109, 128, 0);
+  width: 98%;
+  height: 100%;
 }
