--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,3 +1,3 @@
 <div>
-  <h1>You have reached this page in error</h1>
+  <h1>You have reached this page in error. Sorry for the inconvenience.</h1>
 </div>
