--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,11 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/ultimate.css">
   <title>BOOKS</title>
 </head>
 
 <body>
+  <header id="header1">
+
+  </header>
+  <header id="header2">
+
+  </header>
   <section id="formBox">
     <h2 id="boxTitle">Enter your query below.</h2>
     <form action="/show"  method="POST">
@@ -18,7 +24,7 @@
       <input class="inputQueryHere" type="radio" name="searchType" value="title">
         <label for="author">Author</label>
       <input class="inputQueryHere" type="radio" name="searchType" value="author">
-      <button type="submit" id="button">Search</button>
+      <button type="submit" id="indexButton">Search</button>
     </form>
   </section>
   <main>
